--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "com.studios.taprobana.openai",
   "version": "1.0.0",
   "displayName": "Unity OpenAI",
-  "description": "OpenAI for unity",
+  "description": "Library for OpenAI API for Unity",
   "unity": "2019.1",
   "unityRelease": "0b5",
   "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.2.1"
   },
   "keywords": [
     "unity",
@@ -15,6 +16,6 @@
   "author": {
     "name": "Taprobana Studios",
     "email": "taprobanastudios@gmail.com",
-    "url": "https://www.unity3d.com"
+    "url": "https://github.com/TaprobanaStudios/OpenAI-Unity"
   }
 }
